# nclbindings

./: CMakeLists.txt  INSTALL  Makefile.perl  Makefile.python  Makefile.ruby  README  TODO  ncl.i  nxsassumptionsblock.i  nxsblock.i  nxscharactersblock.i  nxsdatablock.i  nxsdefs.i  nxsdiscretedatum.i  nxsdiscretematrix.i  nxsdistancedatum.i  nxsdistancesblock.i  nxsexception.i  nxsreader.i  nxssetreader.i  nxsstring.i  nxstaxablock.i  nxstoken.i  nxstreesblock.i  nxsunalignedblock.i
test/python/: nclsimpletest.py  ncltest.py
test/ruby/: nclsimpletest.rb  ncltest.rb
